@@ -3,7 +3,7 @@ envlist = py37,py38,py39,py310
 
 [testenv]
 commands =
-    coverage run setup.py test
+    coverage run -m unittest discover -s tryton.tests
     coverage report --include=./tryton/* --omit=*/tests/*
 deps =
     coverage
